--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/cli": "^1.0.0-beta.8",
     "@capacitor/core": "^1.0.0-beta.8",
     "axios": "^0.18.0",
+    "date-fns": "^1.29.0",
     "mathjax": "^2.7.5",
     "vue": "^2.5.2",
     "vue-mathjax": "0.0.5",
