--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "axios": "^0.18.0",
     "date-fns": "^1.29.0",
     "mathjax": "^2.7.5",
+    "v-offline": "^1.0.10",
     "vue": "^2.5.2",
+    "vue-content-loader": "^0.2.1",
     "vue-mathjax": "0.0.5",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.0",
